# realmpipe

./: .gitignore  .travis.yml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs  ui.rs
cli/src/net/: autoupdate.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs  serverlist.rs
core/src/adapters/: complex.rs  mod.rs  primitives.rs  rle.rs
core/src/gamedata/: mod.rs  stat.rs
core/src/packets/: mod.rs
core/src/pipe/: error.rs  pipe.rs
core/src/proxy/: mod.rs  raw.rs
examples/: logging_listener.rs
extractor/: Cargo.toml
extractor/src/: clientdata.rs  lib.rs  serverlist.rs
realmpipe/: Cargo.toml
realmpipe/src/: main.rs
realmpipe_extractor/: Cargo.toml  build.rs
realmpipe_extractor/src/: binaries.rs  lib.rs
src/: ext.rs  extractor.rs  lib.rs  main.rs  mappings.rs  net.rs  rc4.rs  serverconfig.rs  serverlist.rs
src/data/: flash_extractor.rs  mod.rs
src/gamedata/: basic.rs
src/mappings/: mod.rs
src/net/: adapters.rs  mod.rs  packets.rs  proxy.rs
src/net/adapters/: complex.rs  mod.rs  primitives.rs  rle.rs
src/net/data/: basic.rs  stat.rs
src/net/packets/: manual_adapters.rs  mod.rs
src/net/proxy/: codec.rs  mod.rs  policy.rs  raw.rs
src/packets/: manual_adapters.rs  mod.rs
src/pipe/: autopacket.rs  context.rs  mod.rs  pipe.rs  plugin.rs  state.rs
src/proxy/: codec.rs  mod.rs  raw.rs
tests/: test_extraction.rs
