[package]
name = "realmpipe"
description = "A lightweight and efficient proxy for Realm of the Mad God"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "realmpipe"
doc = true

[[bin]]
path = "src/main.rs"
name = "realmpipe"
doc = false

[dependencies]
cursive = { version = "0.11.0", default-features = false, features = [ "pancurses-backend" ] }
structopt = "0.2.15"
log = "0.4.6"
tempfile = "3.0.7"
bytes = "0.4.12"
crossbeam-channel = "0.3.8"
rust-crypto = "0.2.36"
failure = "0.1.5"
failure_derive = "0.1.5"
num = "0.2.0"
assert_matches = "1.3.0"
serde = { version = "1.0.89", features = [ "derive" ] }
serde_json = "1.0.39"
regex = "1.1.2"
lazy_static = "1.3.0"

[dev-dependencies]
simple_logger = "1.0.1"

[build-dependencies]
git2 = { version = "0.8.0", default-features = false, features = [ "https" ] }
tempfile = "3.0.7"
