[package]
name = "realmpipe"
description = "A lightweight and efficient proxy for Realm of the Mad God"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"

[profile.release]
lto = true

[lib]
path = "src/lib.rs"
name = "realmpipe"
doc = true

[[bin]]
path = "src/main.rs"
name = "realmpipe"
doc = false

[dependencies]
cursive = { version = "0.11", default-features = false, features = [ "pancurses-backend" ] }
structopt = "0.2"
log = "0.4"
tempfile = "3.0"
bytes = "0.4"
crossbeam-channel = "0.3"
rust-crypto = "0.2"
failure = "0.1"
failure_derive = "0.1"
num = "0.2"
assert_matches = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
regex = "1.1"
lazy_static = "1.3"
tokio = "0.1"
hex = "0.3"
bimap = { version = "0.3", features = [ "serde" ] }
reqwest = "0.9"
serde-xml-rs = "0.3"

[dev-dependencies]
simple_logger = "1.0"

[build-dependencies]
git2 = { version = "0.8", default-features = false, features = [ "https" ] }
tempfile = "3.0"
