[package]
name = "realmpipe_cli"
description = "A terminal interface for realmpipe"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
realmpipe_core = { path = "../core" }
realmpipe_extractor = { path = "../extractor" }
cursive = { version = "0.11", default-features = false, features = [ "pancurses-backend" ] }
structopt = "0.2"
log = "0.4"
reqwest = "0.9"
tokio = "0.1"
futures = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
failure = "0.1"
lazy_static = "1.3"
bytes = "0.4"
appdirs = "0.2"
log4rs = { version = "0.8", default-features = false, features = [ "file_appender" ] }

[dev-dependencies]
mime-sniffer = "0.1"
