[package]
name = "realmpipe_core"
description = "A lightweight and efficient proxy for Realm of the Mad God"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"

[dependencies]
log = "0.4"
bytes = "0.4"
failure = "0.1"
failure_derive = "0.1"
num = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
lazy_static = "1.3"
tokio = "0.1"
hex = "0.3"
bimap = { version = "0.3", features = [ "serde" ] }
reqwest = "0.9"
futures = "0.1"
derive_builder = "0.7"
assert_matches = "1.3"
