[package]
name = "realmpipe_extractor"
description = "Utilities to automatically extract required data for use with realmpipe_core"
version = "0.1.0"
authors = ["Dominic Marcuse <dominic@marcuse.us>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
realmpipe_core = { path = "../core" }
bimap = "0.3"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.3"
log = "0.4"
regex = "1.1"
tempfile = "3.0"
reqwest = "0.9"
futures = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde-xml-rs = "0.3"

[dev-dependencies]
tokio = "0.1"

[build-dependencies]
git2 = { version = "0.8", default-features = false, features = [ "https" ] }
tempfile = "3.0"
